Ticket #28879: Fixed translations generated by DeepL.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -20,9 +20,9 @@ class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_NO_SUCH_CONFIGURATION_TYPE__NAME = Der angegebene Konfigurationstyp ''{0}'' existiert nicht.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_BINARY_DATA_EXPECTED__ACTUAL_EXPR = In "{1}" werden Binäre Daten erwartet, erhalten wurde aber "{0}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CONVERSION_FAILED__MSG_EXPR = Umwandlung in "{1}" fehlgeschlagen: {0}
-class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Kopfzeilen sollten in der gleichen Zeile{1}" sein, aber{0}" bekommen.
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Kopfzeilen sollten in der gleichen Zeile "{1}" sein, aber "{0}" bekommen.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Ungültiger Inhaltstyp "{0}" angegeben: {1}
-class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Der angegebene Inhaltstyp{0}" wird nicht unterstützt.
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Der angegebene Inhaltstyp "{0}" wird nicht unterstützt.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Die Daten aus "{0}" konnten nicht entpackt werden: {1}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} darf nicht negativ sein: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = Die angegebene Revision ist null in: {0}.
@@ -1282,7 +1282,7 @@ com.top_logic.model.search.tiles.ModelBasedTilePreview.Config.model.tooltip = <i
 com.top_logic.model.search.tiles.ModelBasedTilePreview.tooltip = <i>Etikettenbasierte Vorschau</i>, deren Teile (Etikett, Beschreibung und eigentliche Vorschau) separat konfiguriert werden.
 com.top_logic.model.search.tiles.SimpleStaticTilePreviewText = Einfacher statischer Kachelvorschau-Text
 com.top_logic.model.search.tiles.SimpleStaticTilePreviewText.Config.text = Text
-com.top_logic.model.search.tiles.SimpleStaticTilePreviewText.Config.text.tooltip = <i>Ressourcenschlüssel</i> für den internationalisierten Text. <p> Der <i>Ressourcenschlüssel</i> kann eine freie Variable{0}) enthalten, die mit der Standardübersetzung des Vorschaumodells gefüllt wird. </p>
+com.top_logic.model.search.tiles.SimpleStaticTilePreviewText.Config.text.tooltip = <i>Ressourcenschlüssel</i> für den internationalisierten Text. <p> Der <i>Ressourcenschlüssel</i> kann eine freie Variable ({0}) enthalten, die mit der Standardübersetzung des Vorschaumodells gefüllt wird. </p>
 com.top_logic.model.search.tiles.SimpleStaticTilePreviewText.tooltip = <i>Text</i> Berechnung des Textes unter Verwendung eines konfigurierten <i>Ressourcenschlüssels</i>.
 com.top_logic.model.search.tiles.StaticImageContentProvider = Anbieter statischer Bildinhalte
 com.top_logic.model.search.tiles.StaticImageContentProvider.Config.image = Bild
