--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -909,7 +909,7 @@ class.com.top_logic.layout.basic.I18NConstants.SPONTANEOUS_NO_APPLY_CLOSURE = Th
 class.com.top_logic.layout.basic.component.I18NConstants.COMMAND_DISPATCH_COMMAND = Internal command dispatch
 class.com.top_logic.layout.basic.timer.I18NConstants.TIMER_UPDATE = Timer update
 class.com.top_logic.layout.bookmark.I18NConstants.CREATE_BOOKMARK_TITLE__MODEL = Bookmark for {0}.
-class.com.top_logic.layout.bookmark.I18NConstants.CREATE_BOOKMARK__MODEL = You can copy the bookmark link for{0}" by opening the context menu of your browser on the icon below.
+class.com.top_logic.layout.bookmark.I18NConstants.CREATE_BOOKMARK__MODEL = You can copy the bookmark link for "{0}" by opening the context menu of your browser on the icon below.
 class.com.top_logic.layout.channel.I18NConstants.ERROR_TOO_MUCH_RECURSION__CHANNEL_VALUES = Maximum recursion depth reached. The following values were assigned to channel "{0}" in succession: {1}
 class.com.top_logic.layout.compare.I18NConstants.CHANGED_BY_SYSTEM = Change by system ({0})
 class.com.top_logic.layout.compare.I18NConstants.COMPARE_COLUMN_LABEL = Compare revision
