--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6915,7 +6915,7 @@ com.top_logic.mig.html.layout.tiles.StepOutCommand.tooltip = Befehl zum Anzeigen
 com.top_logic.mig.html.layout.tiles.TileBuilder = Fliesenbauer
 com.top_logic.mig.html.layout.tiles.TileBuilder.tooltip = Definition des Builder zum Erstellen einer neuen <i>Komponente</i>, die in einer Kachel angezeigt wird.
 com.top_logic.mig.html.layout.tiles.TileComponentName = Name der Kachelkomponente
-com.top_logic.mig.html.layout.tiles.TileComponentName.name.tooltip = Name der neuen Komponente. <p> Der Name wird in der Navigationsleiste angezeigt. Er wird parametrisiert mit dem Kontextmodell der Komponente angezeigt. Das Context-Modell wird an der Position{0}' im Namen angezeigt. </p>
+com.top_logic.mig.html.layout.tiles.TileComponentName.name.tooltip = Name der neuen Komponente. <p> Der Name wird in der Navigationsleiste angezeigt. Er wird parametrisiert mit dem Kontextmodell der Komponente angezeigt. Das Context-Modell wird an der Position ''{0}'' im Namen angezeigt. </p>
 com.top_logic.mig.html.layout.tiles.TileComponentName.tooltip = Konfiguration des Namens einer Komponente, die in der Kachelumgebung angezeigt wird.
 com.top_logic.mig.html.layout.tiles.TileDefinition = Kachel-Definition
 com.top_logic.mig.html.layout.tiles.TileDefinition.component = Komponente
