Ticket #28890: Fixed accepted file types annotation and check.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7451,7 +7451,7 @@ com.top_logic.model.annotate.ui.ReferencePresentation.TABLE.tooltip = Zeigt die 
 com.top_logic.model.annotate.ui.ReferencePresentation.tooltip = Aufzählung der möglichen Arten zur Anzeige der Optionen und des Wertes einer <i>Referenz</i>.
 com.top_logic.model.annotate.ui.TLAcceptedTypes = Akzeptierte Typen
 com.top_logic.model.annotate.ui.TLAcceptedTypes.tooltip = <i>Annotation</i>, die die akzeptierten Dateitypen für Datei-Upload-Dialoge definiert.
-com.top_logic.model.annotate.ui.TLAcceptedTypes.value.tooltip = Durch Kommata getrennte Liste der akzeptierten Dateitypen.
+com.top_logic.model.annotate.ui.TLAcceptedTypes.value.tooltip = Durch Kommata getrennte Liste der akzeptierten Dateitypen. <p> Ein akzeptierter Dateityp kann entweder ein MIME-Typ wie <code>image/*</code> oder <code>image/jpeg</code> sein, oder ein Dateimuster wie <code>*.xml</code>. </p>
 com.top_logic.model.annotate.ui.TLColumnInfo = Spalten-Info
 com.top_logic.model.annotate.ui.TLColumnInfo.tooltip = <i>Annotation</i>, die Spalteneinstellungen für ein Attribut angibt.
 com.top_logic.model.annotate.ui.TLCssClass = Css-Klasse
