--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7451,7 +7451,7 @@ com.top_logic.model.annotate.ui.ReferencePresentation.TABLE.tooltip = Display th
 com.top_logic.model.annotate.ui.ReferencePresentation.tooltip = Enumeration of the possible kinds to display the options and value of a <i>reference</i>.
 com.top_logic.model.annotate.ui.TLAcceptedTypes = Accepted types
 com.top_logic.model.annotate.ui.TLAcceptedTypes.tooltip = <i>Annotation</i> that defines the accepted file types for file upload dialogs.
-com.top_logic.model.annotate.ui.TLAcceptedTypes.value.tooltip = Comma separated list of accepted file types.
+com.top_logic.model.annotate.ui.TLAcceptedTypes.value.tooltip = Comma separated list of accepted file types. <p> An accepted file type can either be a MIME type like <code>image/*</code> or <code>image/jpeg</code>, or a file pattern such as <code>*.xml</code>. </p>
 com.top_logic.model.annotate.ui.TLColumnInfo = Column info
 com.top_logic.model.annotate.ui.TLColumnInfo.tooltip = <i>Annotation</i> specifying column settings for an attribute.
 com.top_logic.model.annotate.ui.TLCssClass = Css class
