Ticket #28880: Enhance Try/Throw functionality with value parameter and improved error handling
- Add optional value parameter to Throw method for passing data with
exceptions
- Enhance ScriptAbort to store and retrieve values from throw() calls
- Improve Try method to handle different exception types with specific
parameter passing:
  * ScriptAbort: (message, originalArg, value)
  * I18NException: (resKey, originalArg)
  * Regular Exception: (message, originalArg)
- Make catchFunction optional in Try method (returns null if not
provided)
- Update Throw method to use modern Builder pattern with
ArgumentDescriptor
- Update documentation for both Try and Throw methods with new examples
- Fix image references in documentation to work in tooltips (convert to
base64)

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -274,7 +274,7 @@ com.top_logic.model.search.expr.Sleep$Builder.tooltip = <i>Methodenersteller</i>
 com.top_logic.model.search.expr.SubList$Builder = Erbauer
 com.top_logic.model.search.expr.SubList$Builder.tooltip = <i>Methodenersteller</i>, der <i>eine Teilliste</i> erstellt.
 com.top_logic.model.search.expr.Throw$Builder = Erbauer
-com.top_logic.model.search.expr.Throw$Builder.tooltip = <i>Methoden-Builder</i>, der <i>Wurf</i> erzeugt.
+com.top_logic.model.search.expr.Throw$Builder.tooltip = <i>Einfacher Erbauer</i> von <i>Methoden</i> zur Erstellung einer <i>throw-Funktion</i>.
 com.top_logic.model.search.expr.ToDate$Builder = Erbauer
 com.top_logic.model.search.expr.ToDate$Builder.tooltip = <i>Bisheriger</i> Ersteller der<i> Methode</i>.
 com.top_logic.model.search.expr.ToMillis$Builder = Erbauer
