--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -274,7 +274,7 @@ com.top_logic.model.search.expr.Sleep$Builder.tooltip = <i>Method builder</i> cr
 com.top_logic.model.search.expr.SubList$Builder = Builder
 com.top_logic.model.search.expr.SubList$Builder.tooltip = <i>Method builder</i> creating <i>sub list</i>.
 com.top_logic.model.search.expr.Throw$Builder = Builder
-com.top_logic.model.search.expr.Throw$Builder.tooltip = <i>Method builder</i> creating <i>throw</i>.
+com.top_logic.model.search.expr.Throw$Builder.tooltip = <i>Simple method builder</i> creating a <i>throw</i> function.
 com.top_logic.model.search.expr.ToDate$Builder = Builder
 com.top_logic.model.search.expr.ToDate$Builder.tooltip = <i>Method builder</i> creating <i>to date</i>.
 com.top_logic.model.search.expr.ToMillis$Builder = Builder
