--- a/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_de.properties
+++ b/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_de.properties
@@ -135,6 +135,7 @@ class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TL_OBJECT__VAL_E
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TYPE_PART__EXPR_VALUE = Auswertung ''{1}'' von ''{0}'' ist kein Modell-Attribut.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NO_SUCH_PROPERTY__OBJ_NAME_EXPR = Das Objekt "{0}" hat keine Eigenschaft "{1}" in {2}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NUMBER_REQUIRED__VALUE_EXPR = Es wird eine Zahl erwartet, aber "{0}" wurde übergeben in {1}.
+class.com.top_logic.model.search.expr.I18NConstants.ERROR_TRY_METHOD_REQUIRES_TWO_ARGUMENTS = Try-Methode benötigt mindestens 2 Argumente: argument und tryFunction.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_UNEXPECTED_NULL_VALUE__EXPR = Der Wert darf nicht "null" sein in {0}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_UNEXPECTED_TYPE__EXPECTED_VAL_EXPR = Der Wert "{1}" ist nicht vom erwarteten Typ "{0}" in {2}.
 class.com.top_logic.model.search.expr.config.I18NConstants.ERROR_EXPRESSION_SYNTAX__DETAILS = Syntax-Fehler: {0}
