--- a/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_en.properties
+++ b/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_en.properties
@@ -135,6 +135,7 @@ class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TL_OBJECT__VAL_E
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TYPE_PART__EXPR_VALUE = Evaluation ''{1}'' of ''{0}'' does not result in a model attribute.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NO_SUCH_PROPERTY__OBJ_NAME_EXPR = The object "{0}" has no property "{1}" in {2}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NUMBER_REQUIRED__VALUE_EXPR = A number is expected, but "{0}" was given in {1}.
+class.com.top_logic.model.search.expr.I18NConstants.ERROR_TRY_METHOD_REQUIRES_TWO_ARGUMENTS = Try method requires at least 2 arguments: argument and tryFunction.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_UNEXPECTED_NULL_VALUE__EXPR = The value must not be "null" in {0}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_UNEXPECTED_TYPE__EXPECTED_VAL_EXPR = The value "{1}" is not of the expected type "{0}" in {2}.
 class.com.top_logic.model.search.expr.config.I18NConstants.ERROR_EXPRESSION_SYNTAX__DETAILS = Syntax error: {0}
