Ticket #28886: Reject export, if it contains dangling references.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -216,6 +216,7 @@ class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_READING_VALUE__
 class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_RESOLVING_TYPE__KIND_MSG = Typ{0}" kann nicht aufgelöst werden: {1}
 class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_CREATE_BINDING__ATTR_MSG = Kann keine Wertebindung für{0}" erstellen: {1}
 class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_SERIALIZE__VAL_ATTR_MSG = Der Wert "{0}" von Attribut {1} konnte nicht serialisiert werden: {2}
+class.com.top_logic.model.instance.exporter.I18NConstants.REFERENCED_OBJECT_NOT_INCLUDED__TYPE_ATTR = Objekt des Typs {0} wurde aus dem exportierten Objektgraphen referenziert, aber es wird weder von einer Kompositionsreferenz referenziert, noch wurde seine referenzierende Referenz {1} explizit einbezogen oder ausgeschlossen.
 class.com.top_logic.model.instance.importer.I18NConstants.CANNOT_ASSIGN_PLAIN_VALUE_TO_REF__ATTR_VAL_LOC = Das Referenzattribut {0} darf bei {2} nicht mit dem einfachen Wert "{1}" belegt werden.
 class.com.top_logic.model.instance.importer.I18NConstants.ERROR_STORING_COLLECTION_TO_SINGLE_REF__ATTR_LOC = Es können nicht mehrere Werte in der Singleton-Referenz "{0}" bei {1} gespeichert werden.
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_SETTING_VALUE__VAL_ATTR_LOC_MSG = Der Wert "{0}" konnte nicht in das Attribut "{1}" gesetzt werden ({2}): {3}
