--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -216,6 +216,7 @@ class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_READING_VALUE__
 class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_RESOLVING_TYPE__KIND_MSG = Cannot resolve type "{0}": {1}
 class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_CREATE_BINDING__ATTR_MSG = Cannot create value binding for "{0}": {1}
 class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_SERIALIZE__VAL_ATTR_MSG = Failed to serialize value "{0}" of attribute {1}: {2}
+class.com.top_logic.model.instance.exporter.I18NConstants.REFERENCED_OBJECT_NOT_INCLUDED__TYPE_ATTR = Object of type {0} was referenced from the exported object graph, but it is neither referenced from a composition reference, nor was its referring reference {1} explicitly included nor excluded.
 class.com.top_logic.model.instance.importer.I18NConstants.CANNOT_ASSIGN_PLAIN_VALUE_TO_REF__ATTR_VAL_LOC = Reference attribute "{0}" must not be assigned plain value "{1}" at {2}.
 class.com.top_logic.model.instance.importer.I18NConstants.ERROR_STORING_COLLECTION_TO_SINGLE_REF__ATTR_LOC = Multiple values cannot be stored into singleton reference "{0}" at {1}.
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_SETTING_VALUE__VAL_ATTR_LOC_MSG = Failed to set value "{0}" to attribute "{1}" at {2}: {3}
