--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -23,6 +23,7 @@ class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERR
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Ungültiger Inhaltstyp "{0}" angegeben: {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Der angegebene Inhaltstyp{0}" wird nicht unterstützt.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Die Daten aus "{0}" konnten nicht entpackt werden: {1}
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE_MSG = Instanzimport der Datei "{0}" fehlgeschlagen: {1}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} darf nicht negativ sein: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = Die angegebene Revision ist null in: {0}.
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} ist unbekannt: {0}
@@ -614,6 +615,10 @@ com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder = 
 com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder.tooltip = <i>Methodenersteller</i> für <i>base64encode</i>.
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder.tooltip = <i>Methodenersteller</i> zur Erstellung von <i>Binärdaten</i>.
+com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder = Ersteller
+com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Instanz-Export-Ausdrücken</i>.
+com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder = Ersteller
+com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Instanzimportausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von CSV</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder = Erbauer
@@ -965,10 +970,12 @@ com.top_logic.model.search.providers.InitializerByExpression.Config.function = F
 com.top_logic.model.search.providers.InitializerByExpression.Config.function.tooltip = Funktion, die ein Objekt des annotierten Typs initialisiert. <p> Es wird erwartet, dass die Funktion das neu erstellte Objekt als einziges Argument verwendet. </p> <p> Das Objekt hat bereits Standardwerte für alle Attribute. </p>
 com.top_logic.model.search.providers.InitializerByExpression.tooltip = <i>Objektinitialisierer</i>, der das Objekt durch Ausführen eines <code>TL-Script</code> initialisiert.
 com.top_logic.model.search.providers.InstanceResolverByAttribute = Instanzauflöser nach Attribut
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.annotation = Annotation
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.annotation.tooltip = Der Container dieser Konfiguration für den Zugriff auf den Kontext.
 com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute = Attribut
 com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute.tooltip = Das identifizierende Attribut.
 com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type = Typ
-com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type.tooltip = Der aufzulösende Typ.
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type.tooltip = Der aufzulösende Typ (nur im Konfigurationseditor zugänglich).
 com.top_logic.model.search.providers.InstanceResolverByAttribute.tooltip = <i>Instanzauflöser</i>, der Objekte anhand von Attributen mit eindeutigen Werten identifiziert. <p> Dieser Resolver sollte nur verwendet werden, wenn der aufgelöste Typ eine Abbildung in einer Tabelle hat und das Attribut vom primitiven Typ auf eine DB-Spalte mit einem eindeutigen Index abgebildet ist. Wenn dies nicht der Fall ist, wird die Auflösung von Objekten ineffizient und speicherintensiv. Stellen Sie in diesem Fall sicher, dass es nur eine kleine Anzahl solcher Objekte gibt. </p>
 com.top_logic.model.search.providers.InstanceResolverByExpression = TL-Script-Instanzauflöser
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity = Identität
