--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -23,6 +23,7 @@ class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERR
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Invalid content type "{0}" specified: {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Given content type "{0}" is not supported.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Failed to unzip data from "{0}": {1}
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE_MSG = Instance import of file "{0}" failed: {1}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = The given commit number {1} must not be negative: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = The given revision is null in: {0}.
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = The given commit number {1} is unknown: {0}
@@ -614,6 +615,10 @@ com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder = 
 com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder.tooltip = <i>Method builder</i> for <i>base64encode</i>.
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder.tooltip = <i>Method builder</i> creating <i>binary</i> data.
+com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder.tooltip = <i>Method builder</i> creating <i>instance export</i> expressions.
+com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder.tooltip = <i>Method builder</i> creating <i>instance import</i> expressions.
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder.tooltip = <i>Method builder</i> for <i>parse CSV</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder = Builder
@@ -965,10 +970,12 @@ com.top_logic.model.search.providers.InitializerByExpression.Config.function = F
 com.top_logic.model.search.providers.InitializerByExpression.Config.function.tooltip = Function initializing an object of the annotated type. <p> The function is expected to use the newly created object single argument. </p> <p> The object already has default values for all attributes. </p>
 com.top_logic.model.search.providers.InitializerByExpression.tooltip = <i>Object initializer</i> initializing the object by executing a <code>TL-Script</code> expression.
 com.top_logic.model.search.providers.InstanceResolverByAttribute = Instance resolver by attribute
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.annotation = Annotation
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.annotation.tooltip = The container of this configuration for accessing context.
 com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute = Attribute
 com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute.tooltip = The identifying attribute.
 com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type = Type
-com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type.tooltip = The type to resolve.
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type.tooltip = The type to resolve (only accessible in the config editor).
 com.top_logic.model.search.providers.InstanceResolverByAttribute.tooltip = <i>Instance resolver</i> that identifies objects by attributes with unique values. <p> This resolver should only be used, if the resolved type has a table mapping and the attribute of primitive type and mapped to a DB column with a unique index. If this is not the case, resolving objects becomes inefficient and memory consuming. In that case, make sure, that there is only a small amount of such objects. </p>
 com.top_logic.model.search.providers.InstanceResolverByExpression = TL-Script instance resolver
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity = Identity
