Ticket #28890: Replaced legacy I18N with JavaDoc base I18N.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7449,7 +7449,7 @@ com.top_logic.model.annotate.ui.ReferencePresentation.RADIO_INLINE.tooltip = Für
 com.top_logic.model.annotate.ui.ReferencePresentation.TABLE = Tabelle
 com.top_logic.model.annotate.ui.ReferencePresentation.TABLE.tooltip = Zeigt die Referenz als Tabelle mit Werten als Zeilen an. <p> Bei der Bearbeitung der Referenz können die Zeilen entfernt oder neue Zeilen in einem Pop-up-Dialog ausgewählt werden, der mögliche Werte anzeigt. </p> <p> Die in der Tabelle angezeigten Spalten werden entweder durch die Annotation <i>Standardspalten</i> festgelegt oder sind die Standardspalten des Referenztyps, wie sie in der Anwendungskonfiguration global konfiguriert sind. </p> <p> Die Darstellung der Optionen im Auswahldialog kann mit der Annotation <i>Darstellung im Auswahldialog</i> angepasst werden. </p>
 com.top_logic.model.annotate.ui.ReferencePresentation.tooltip = Aufzählung der möglichen Arten zur Anzeige der Optionen und des Wertes einer <i>Referenz</i>.
-com.top_logic.model.annotate.ui.TLAcceptedTypes = Akzeptierte Typen
+com.top_logic.model.annotate.ui.TLAcceptedTypes = Akzeptierte Dateitypen
 com.top_logic.model.annotate.ui.TLAcceptedTypes.tooltip = <i>Annotation</i>, die die akzeptierten Dateitypen für Datei-Upload-Dialoge definiert.
 com.top_logic.model.annotate.ui.TLAcceptedTypes.value.tooltip = Durch Kommata getrennte Liste der akzeptierten Dateitypen. <p> Ein akzeptierter Dateityp kann entweder ein MIME-Typ wie <code>image/*</code> oder <code>image/jpeg</code> sein, oder ein Dateimuster wie <code>*.xml</code>. </p>
 com.top_logic.model.annotate.ui.TLColumnInfo = Spalten-Info
