Ticket #28604: Added confirm dialog in case of conflicts.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,5 @@
+class.com.top_logic.element.changelog.I18NConstants.CONFLICTS_WHEN_UNDO_REVISION__REV = Die Fachobjekte sind seit "{0}" geändert worden. Soll die ursprüngliche Änderung trotzdem rückgängig gemacht werden?
+class.com.top_logic.element.changelog.I18NConstants.UNDO_CANCELED_BY_USER = Der Benutzer hat die Rückgängigmachung aufgrund von widersprüchlichen Änderungen abgebrochen.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING_MERGED = Die für die Eigenschaft "{1}" des Objekts "{0}" eingestellten Werte "{2}" sind nicht mehr verfügbar (inzwischen gelöscht), der Wert wird auf "{3}" gesetzt.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_CREATE_ALREADY_EXISTS__OBJ = Das Objekt, das erstellt werden soll, existiert bereits: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = Das Objekt, das geändert werden sollte, existiert nicht mehr: {0}
@@ -167,6 +169,8 @@ com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maxi
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time.tooltip = Wie lange man in die Vergangenheit schauen kann. <p> Ein Wert von <code>0</code> bedeutet unbegrenzt. </p>
 com.top_logic.element.changelog.ChangeLogListModelBuilder.tooltip = <i>Erbauer eines Listenmodells</i> für eine Tabelle, die das Änderungsprotokoll der Anwendung anzeigt.
 com.top_logic.element.changelog.RevertCommandHandler = Änderungen rückgängig machen
+com.top_logic.element.changelog.RevertCommandHandler.Config.check-conflicts = Konflikte prüfen
+com.top_logic.element.changelog.RevertCommandHandler.Config.check-conflicts.tooltip = Ob im Falle von Konflikten eine Bestätigung verlangt werden soll. Anschließend hat der Benutzer die Möglichkeit, den Undo-Vorgang abzubrechen.
 com.top_logic.element.changelog.RevertCommandHandler.tooltip = <i>Befehl</i> zum Rückgängigmachen eines <i>Änderungssatzes</i>.
 com.top_logic.element.comment.layout.CommentDialogComponent = Kommentar-Dialogkomponente
 com.top_logic.element.comment.layout.CommentDialogComponent$EditCommentHandler = Kommentar-Handler bearbeiten
