--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,5 @@
+class.com.top_logic.element.changelog.I18NConstants.CONFLICTS_WHEN_UNDO_REVISION__REV = The business objects have been modified since "{0}". Should the original change still be reverted?
+class.com.top_logic.element.changelog.I18NConstants.UNDO_CANCELED_BY_USER = The user canceled the undo due to conflicting changes.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING_MERGED = Values "{2}" set to the property "{1}" of object "{0}" are no longer available (deleted in the meantime), setting value to "{3}".
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_CREATE_ALREADY_EXISTS__OBJ = The object that would be created already exists: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = The object that should be changed does no longer exist: {0}
@@ -167,6 +169,8 @@ com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time = Maxi
 com.top_logic.element.changelog.ChangeLogListModelBuilder.Config.max-time.tooltip = How long to look into the past. <p> A value of <code>0</code> means unlimited. </p>
 com.top_logic.element.changelog.ChangeLogListModelBuilder.tooltip = <i>List model builder</i> for a table that displays the application's change log.
 com.top_logic.element.changelog.RevertCommandHandler = Revert command handler
+com.top_logic.element.changelog.RevertCommandHandler.Config.check-conflicts = Check conflicts
+com.top_logic.element.changelog.RevertCommandHandler.Config.check-conflicts.tooltip = Whether to ask for confirmation in case of conflicts. Then, the user has the option to cancel the undo operation.
 com.top_logic.element.changelog.RevertCommandHandler.tooltip = <i>Command</i> for reverting a <i>change set</i>.
 com.top_logic.element.comment.layout.CommentDialogComponent = Comment dialog component
 com.top_logic.element.comment.layout.CommentDialogComponent$EditCommentHandler = Edit comment handler
