Ticket #28886: Fixed typo.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -606,7 +606,7 @@ com.top_logic.element.layout.instances.export.ExcludeParts.Config.type.tooltip =
 com.top_logic.element.layout.instances.export.ExcludeParts.tooltip = <i>Exportieren von Anpassungen</i>, die ein konfiguriertes Attribut oder eine Referenz ausschlieﬂen.
 com.top_logic.element.layout.instances.export.ExcludeTypes = Typen ausschlieﬂen
 com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types = Typen
-com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types.tooltip = Der Typa, der vom Export ausgeschlossen werden soll.
+com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types.tooltip = Die Typen, die vom Export ausgeschlossen werden sollen.
 com.top_logic.element.layout.instances.export.ExcludeTypes.tooltip = <i>Exportanpassung</i>, die Typen vom Export ausschlieﬂt.
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instanzexport
 com.top_logic.element.layout.instances.export.InstanceExportCommand.Config.customizations = Anpassungen
