--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -606,7 +606,7 @@ com.top_logic.element.layout.instances.export.ExcludeParts.Config.type.tooltip =
 com.top_logic.element.layout.instances.export.ExcludeParts.tooltip = <i>Export customization</i> that excludes a configured attribute or reference.
 com.top_logic.element.layout.instances.export.ExcludeTypes = Exclude types
 com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types = Types
-com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types.tooltip = The typea to exclude from export.
+com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types.tooltip = The types to exclude from export.
 com.top_logic.element.layout.instances.export.ExcludeTypes.tooltip = <i>Export customization</i> that excludes types from export.
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instance export command
 com.top_logic.element.layout.instances.export.InstanceExportCommand.Config.customizations = Customizations
