--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -209,9 +209,9 @@ class.com.top_logic.model.form.implementation.additional.I18NConstants.SET_START
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_PARSE_REFERENCE__REFERENCE = Objektreferenz ''{0}'' kann nicht geparst werden.
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_RESOLVE_REFERENCE__REFERENCE = Referenz ''{0}'' auf Objekt kann nicht aufgelöst werden.
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_RESOLVE_STATIC_TYPE__REFERENCE = Typ in Objektreferenz ''{0}'' kann nicht aufgelöst werden.
-class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_READING_VALUE__ATR_MSG = Der Wert des Attributs{0}" kann nicht aus xml gelesen werden: {1}
-class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_RESOLVING_TYPE__KIND_MSG = Typ{0}" kann nicht aufgelöst werden: {1}
-class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_CREATE_BINDING__ATTR_MSG = Kann keine Wertebindung für{0}" erstellen: {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_READING_VALUE__ATR_MSG = Der Wert des Attributs "{0}" kann nicht aus xml gelesen werden: {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_RESOLVING_TYPE__KIND_MSG = Typ "{0}" kann nicht aufgelöst werden: {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_CREATE_BINDING__ATTR_MSG = Kann keine Wertebindung für "{0}" erstellen: {1}
 class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_SERIALIZE__VAL_ATTR_MSG = Der Wert "{0}" von Attribut {1} konnte nicht serialisiert werden: {2}
 class.com.top_logic.model.instance.exporter.I18NConstants.REFERENCED_OBJECT_NOT_INCLUDED__TYPE_ATTR = Objekt des Typs {0} wurde aus dem exportierten Objektgraphen referenziert, aber es wird weder von einer Kompositionsreferenz referenziert, noch wurde seine referenzierende Referenz {1} explizit einbezogen oder ausgeschlossen.
 class.com.top_logic.model.instance.importer.I18NConstants.CANNOT_ASSIGN_PLAIN_VALUE_TO_REF__ATTR_VAL_LOC = Das Referenzattribut {0} darf bei {2} nicht mit dem einfachen Wert "{1}" belegt werden.
@@ -6939,7 +6939,7 @@ com.top_logic.mig.html.layout.tiles.StepOutCommand.tooltip = Befehl zum Anzeigen
 com.top_logic.mig.html.layout.tiles.TileBuilder = Fliesenbauer
 com.top_logic.mig.html.layout.tiles.TileBuilder.tooltip = Definition des Builder zum Erstellen einer neuen <i>Komponente</i>, die in einer Kachel angezeigt wird.
 com.top_logic.mig.html.layout.tiles.TileComponentName = Name der Kachelkomponente
-com.top_logic.mig.html.layout.tiles.TileComponentName.name.tooltip = Name der neuen Komponente. <p> Der Name wird in der Navigationsleiste angezeigt. Er wird parametrisiert mit dem Kontextmodell der Komponente angezeigt. Das Context-Modell wird an der Position ''{0}'' im Namen angezeigt. </p>
+com.top_logic.mig.html.layout.tiles.TileComponentName.name.tooltip = Name der neuen Komponente. <p> Der Name wird in der Navigationsleiste angezeigt. Er wird parametrisiert mit dem Kontextmodell der Komponente angezeigt. Das Context-Modell wird an der Position '{0}' im Namen angezeigt. </p>
 com.top_logic.mig.html.layout.tiles.TileComponentName.tooltip = Konfiguration des Namens einer Komponente, die in der Kachelumgebung angezeigt wird.
 com.top_logic.mig.html.layout.tiles.TileDefinition = Kachel-Definition
 com.top_logic.mig.html.layout.tiles.TileDefinition.component = Komponente
