Ticket #28897: Allow to include context for optional import.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7746,6 +7746,8 @@ com.top_logic.model.instance.importer.schema.GlobalRefConf.id = ID
 com.top_logic.model.instance.importer.schema.GlobalRefConf.id.tooltip = Bezeichner des Objekts, auf das verwiesen wird. <p> Die Syntax des Bezeichners hängt von der <i>Instanzauflösung</i> ab, die zur Erstellung dieser ID verwendet wird, und kann von Typ zu Typ variieren. </p>
 com.top_logic.model.instance.importer.schema.GlobalRefConf.kind = Art
 com.top_logic.model.instance.importer.schema.GlobalRefConf.kind.tooltip = Der <i>Instanzauflöser</i>, für den die <i>ID</i> gemacht ist.
+com.top_logic.model.instance.importer.schema.GlobalRefConf.local-id = Lokale ID
+com.top_logic.model.instance.importer.schema.GlobalRefConf.local-id.tooltip = Wenn diese Eigenschaft gesetzt ist, definiert sie die ID, mit der das gleiche Objekt beim gleichen Import lokal referenziert wird. <p> Durch die Einstellung dieser Eigenschaft wird das mehrfache Auflösen desselben Objekts bei einem erneuten Import effizienter. </p>
 com.top_logic.model.instance.importer.schema.GlobalRefConf.tooltip = Verweis auf eine bereits existierende Instanz in der Zielanwendung eines Imports.
 com.top_logic.model.instance.importer.schema.InstanceRefConf = Instanz ref conf
 com.top_logic.model.instance.importer.schema.InstanceRefConf.id = ID
@@ -7758,6 +7760,8 @@ com.top_logic.model.instance.importer.schema.ModelRefConf.tooltip = Verweis auf 
 com.top_logic.model.instance.importer.schema.ObjectConf = Objekt conf
 com.top_logic.model.instance.importer.schema.ObjectConf.attributes = Eigenschaften
 com.top_logic.model.instance.importer.schema.ObjectConf.attributes.tooltip = Attribute, die für das importierte Objekt festgelegt werden sollen.
+com.top_logic.model.instance.importer.schema.ObjectConf.global-id = Globale ID
+com.top_logic.model.instance.importer.schema.ObjectConf.global-id.tooltip = Eine globale ID für das exportierte Objekt. <p> Durch Setzen dieser Eigenschaft wird das exportierte Objekt als Fallback-Objekt gekennzeichnet. Beim Re-Import wird das Objekt nur dann zugewiesen, wenn es im Zielsystem noch kein Objekt mit der angegebenen globalen ID gibt. Wenn die angegebene globale ID im Zielsystem aufgelöst werden kann, wird dieses Objekt anstelle des exportierten verwendet. </p>
 com.top_logic.model.instance.importer.schema.ObjectConf.id = ID
 com.top_logic.model.instance.importer.schema.ObjectConf.id.tooltip = Optionaler import-lokaler Bezeichner, der verwendet wird, um dieses Objekt aus Referenzen anderer importierter Objekte zu referenzieren.
 com.top_logic.model.instance.importer.schema.ObjectConf.tooltip = Importbeschreibung eines einzelnen neu zu erstellenden Objekts. <p> Die Objektkonfiguration kann entweder auf oberster Ebene oder innerhalb einer Kompositionsreferenz erfolgen, die als Teil eines anderen Objekts exportiert wird. </p>
